added Glyph FontAwesome support for new MenuBar icons to be implemented app wide